demo/k8s/demo-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: infra-devops
    component: demo
spec:
  type: NodePort
  ports:
    - nodePort: 32090
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: infra-devops
    component: demo
