demo/k8s/demo-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  labels:
    app: infra-devops
    component: demo
  # Отключаем проброс HTTP
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  # Подключаем наш сертификат
  tls:
    - secretName: demo-ingress
  backend:
    serviceName: demo
    servicePort: 8080
